syntax = "proto3";
package thesixnetwork.sixprotocol.tokenmngr;

import "gogoproto/gogo.proto";
import "tokenmngr/params.proto";
import "tokenmngr/token.proto";
import "tokenmngr/mintperm.proto";
import "tokenmngr/options.proto";
import "tokenmngr/token_burn.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/thesixnetwork/six-protocol/x/tokenmngr/types";

// GenesisState defines the tokenmngr module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  repeated Token tokenList = 3 [ (gogoproto.nullable) = false ];
  repeated Mintperm mintpermList = 4 [ (gogoproto.nullable) = false ];
  Options options = 6;
  repeated TokenBurn tokenBurnList = 7 [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
}
